--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
 <script src="test.js"></script>
+<link href="css.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-
+<div class="posi">
+Hey you! 
+</div>
 <p>Hey!</p>
   </body>
 </html>
