--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link href="css.css" rel="stylesheet" type="text/css">
-<script src="test.js"></script>
-
-</head>
-<body>
-<div class="posi">
-Hey you!
-</div>
-<p>Hey!</p>
-  </body>
+    <head>
+        <link href="css.css" rel="stylesheet" type="text/css">
+        <script src="test.js"></script>
+    </head>
+    <body>
+    <div id="graph">
+        </div>
+    </body>
 </html>
